test/fail/basic_syntax/bad_close_token.lily
#[
SyntaxError: Expected closing token ')', not ']'.
    from bad_close_token.lily:6:
]#

print("test.\\n"]
